# proteinpile

./: README.md  setup.cfg
proteinpile/: cli.py  common.py  design.py  evaluate.py  info.py  mutate.py  pile.py  specification.py  specification_defaults.py  verify.py
templates/: analysis.ipynb
