[metadata]
name = proteinpile
version = attr: proteinpile.__version__
author = Tim O'Donnell
author_email = timodonnell@gmail.com
description = Protein design experiments library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timodonnell/proteinpile
project_urls =
    Bug Tracker = https://github.com/timodonnell/proteinpile/issues
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    frozendict
    #proteopt


[options.entry_points]
console_scripts =
    proteinpile-manipulate = proteinpile.cli:run
